# spelli

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: deregister.rs  libreoffice.rs  list.rs  main.rs  refresh.rs  reg.rs  register.rs
