[package]
name = "spelli"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
gumdrop = "0.8.0"
unic-langid = "0.9.0"
thiserror = "1.0.20"
log = "0.4.8"
iso639 = "0.1.0"
registry = "1.0.0-alpha.1"
widestring = { version = "0.1.0", package = "utfx" }
fern = "0.6.0"
chrono = "0.4.11"
pathos = "0.1.6"
